syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.datamanager";
option java_outer_classname = "FundsInfoServic";
option objc_class_prefix = "FIS";

service FundsInfoService {
    rpc GetFundsPrice (FundCodes) returns (FundInfos) {
    }
}
//获取当前基金信息
message FundCodes {
  repeated string fund_code = 1;//基金code,
}

message FundInfos{
  repeated FundInfo fund_info = 1;//基金信息
}

message FundInfo {
  string fund_code = 1;//基金code
  int32 navunit = 2 ;//基金单位净值
}

